# Snake

./: CMakeLists.txt  README.md  leaderboards.txt  main.cpp
headers/: Board.h  Food.h  Game.h  GameObject.h  Settings.h  ShadowSnake.h  Snake.h  Vec2.h
source/: Board.cpp  Food.cpp  Game.cpp  GameObject.cpp  ShadowSnake.cpp  Snake.cpp
